# semantic-skeleton3d

./: CMakeLists.txt  README.md  requirements.txt
assets/: beam_only.ply  skeleton.ply
python/: infer.py  viewer.py
src/: main.cpp  skeletonizer.cpp  skeletonizer.h
